--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -5,7 +5,7 @@
   <h1>MicroPython Lego RI5 documentation</h1>
 
   <p>
-    {{ _('Welcome! This is the documentation for the Lego Spike Prime/RI5 Hub's MicroPython') }}
+    {{ _('Welcome! This is the documentation for the Lego Spike Prime/RI5 Hub MicroPython') }}
     a fork of v{{ release|e }}.{% if last_updated %}  {{ _('It was last updated') }} {{ last_updated|e }}{% endif %}.
   </p>
 
