Attempt to show up in Google...

--- a/docs/templates/topindex.html
+++ b/docs/templates/topindex.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% set title = _('Overview') %}
+{% set metatags = _('<meta name="google-site-verification" content="HoSJV7gtHag6DVY2ML--HJxVo8V7VccX5VCy9JoFJvU" />') %}
 {% block body %}
 
   <h1>MicroPython Lego RI5 documentation</h1>
